# msr_server

./: .gitignore  .prettierrc  CMakeLists.txt  Cargo.toml  README.md  a.out  build.sh  main.cpp  msr_data.toml  msr_rest_server.service  msr_server.service  package.json
src/: lib.c  lib.rs  main.c  main.cpp  main.rs  msr_server.js  msr_server.ts  server.rs
src/algorithms/: msleep.h  msleep.hpp  split.hpp
src/data_getters/: cpuid_data.hpp  cpuid_data.rs  memory_data.hpp  mod.rs  msr_data.h  msr_data.hpp  system_data.rs  system_files_data.h++  system_files_data.hpp
src/data_getters/main_data/: cpuid_data.rs  mod.rs  msr.rs  msr_data.h  system_data.rs
src/misc/: mod.rs  module_parser.rs  modules.json
