[package]
name = "msr_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "msr_rs"
#crate-type = ["staticlib"]
crate-type = ["cdylib"]

[dependencies]
raw-cpuid = "10.7.0"
sysinfo = "0.28.4"
lazy_static = "1.4.0"
serde = {version = "1.0.175", features = ["derive", "alloc"]}
serde_json = "1.0.103"
toml = "0.7.6"
