[package]
name = "msr_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-cpuid = "11.0.1"
sysinfo = "0.29.10"
lazy_static = "1.4.0"
serde = {version = "1.0.175", features = ["derive", "alloc"]}
serde_json = "1.0.103"
toml = "0.8.6"
rocket = {version = "0.4.11", features = [] }
reqwest = {version = "0.11.18", features = ["blocking"]}

