[package]
name = "msr_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-cpuid = "11.0.1"
sysinfo = "0.30.5"
lazy_static = "1.4.0"
serde = {version = "1.0.175", features = ["derive", "alloc"]}
serde_json = "1.0.103"
toml = "0.8.6"
reqwest = {version = "0.11.18", features = ["blocking"]}
actix-web = "4.4.0"

